Add template with static assets

--- a/templates/portal/home.html
+++ b/templates/portal/home.html
@@ -1,11 +1,138 @@
 {% extends '_base.html' %}
 {% load static %}
 
-{% block title %}Home page{% endblock title %}
+{% block title %}Home page - Job Portal{% endblock title %}
 
 {% block content %}
-<div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-  <img src="{% static 'images/logo.png' %}" class="img-fluid" alt="JobPortal logo"/>
-  <p class="lead">Another job website ....</p>
+
+<div class="row">
+    <div class="col-lg-3">
+        <div class="job_filter white-bg">
+            <div class="form_inner white-bg">
+                <h3>Filter</h3>
+                <form action="#">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="single_field">
+                                <input type="text" placeholder="Search keyword">
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="single_field">
+                                <select class="wide">
+                                    <option data-display="Location">Location</option>
+                                    <option value="1">Rangpur</option>
+                                    <option value="2">Dhaka </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="single_field">
+                                <select class="wide">
+                                    <option data-display="Category">Category</option>
+                                    <option value="1">Category 1</option>
+                                    <option value="2">Category 2 </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="single_field">
+                                <select class="wide">
+                                    <option data-display="Experience">Experience</option>
+                                    <option value="1">Experience 1</option>
+                                    <option value="2">Experience 2 </option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-lg-12">
+                            <div class="single_field">
+                                <select class="wide">
+                                    <option data-display="Job type">Job type</option>
+                                    <option value="1">full time 1</option>
+                                    <option value="2">part time 2 </option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="range_wrap">
+                <label for="amount">Price range:</label>
+                <div id="slider-range"></div>
+                <p>
+                    <input type="text" id="amount" readonly style="border:0; color:#7A838B; font-size: 14px; font-weight:400;">
+                </p>
+            </div>
+            <div class="reset_btn">
+                <button  class="boxed-btn3 w-100" type="submit">Search</button>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-9">
+        <div class="recent_joblist_wrap">
+            <div class="recent_joblist white-bg ">
+                <div class="row align-items-center">
+                    <div class="col-md-6">
+                        <h4>Job Offers</h4>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="serch_cat d-flex justify-content-end">
+                            <select>
+                                <option data-display="Most Recent">Most Recent</option>
+                                <option value="1">...</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="job_lists m-0">
+            <div class="row">
+                {% for job in object_list %}
+                <div class="col-lg-12 col-md-12">
+                    <div class="single_jobs white-bg d-flex justify-content-between">
+                        <div class="jobs_left d-flex align-items-center">
+                            <div class="thumb">
+                                <img src="https://via.placeholder.com/50" alt="">
+                            </div>
+                            <div class="jobs_conetent">
+                                <a href="{{ job.get_absolute_url }}"><h4>{{ job.title }}</h4></a>
+                                <div class="links_locat d-flex align-items-center">
+                                    <div class="location">
+                                        <p> <i class="fa fa-map-marker"></i> {{ job.location }}</p>
+                                    </div>
+                                    <div class="location">
+                                        <p> <i class="fa fa-building"></i> {{ job.company }}</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="jobs_right">
+                            <div class="apply_now">
+                                <a class="heart_mark" href="#"> <i class="fa fa-heart"></i> </a>
+                                <a href="{{ job.get_absolute_url }}" class="boxed-btn3">Apply Now</a>
+                            </div>
+                            <div class="date">
+                                <p>{{ job.created|date:"d M Y" }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="pagination_wrap">
+                        <ul>
+                            <li><a href="#"> <i class="ti-angle-left"></i> </a></li>
+                            <li><a href="#"><span>01</span></a></li>
+                            <li><a href="#"> <i class="ti-angle-right"></i> </a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
